<resources>
    <string name="app_name">Blog</string>
    <string name="login_username">Username......</string>
    <string name="password">Password......</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username.....</string>
    <string name="password_again">Password again....</string>
    <string name="lastname">Last Name ....</string>
    <string name="firstname">First Name ....</string>
    <string name="confirm_email">Confirm email…</string>
    <string name="enter_pass">Enter password ....</string>
    <string name="confirm_pass">Confirm password ....</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="email">Email...</string>
</resources>
