<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_gravity="center"
        android:id="@+id/settingsUserImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        tools:layout_editor_absoluteX="92dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="2dp"
        android:background="#000000"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="405dp" />


        <EditText
            android:hint="@string/firstname"
            android:layout_gravity="center"
            android:id="@+id/settingsUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="71dp"
            tools:layout_editor_absoluteY="267dp" />

        <EditText
            android:hint="@string/lastname"
            android:layout_gravity="center"
            android:id="@+id/settingsUserLastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="71dp"
            tools:layout_editor_absoluteY="267dp" />


    <TextView
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="2dp"
        android:background="#000000"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="240dp" />



        <EditText
            android:layout_gravity="center"
            android:id="@+id/settingsUserEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="71dp"
            tools:layout_editor_absoluteY="267dp"
            android:hint="@string/email"/>


        <EditText
            android:layout_gravity="center"
            android:id="@+id/settingsUserEmailConf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_email"
            tools:layout_editor_absoluteX="71dp"
            tools:layout_editor_absoluteY="331dp" />

        <TextView
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:layout_width="300dp"
            android:layout_height="2dp"
            android:background="#000000"
            tools:layout_editor_absoluteX="42dp"
            tools:layout_editor_absoluteY="240dp" />


        <EditText
            android:hint="@string/enter_pass"
            android:layout_gravity="center"
            android:id="@+id/settingsUserPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="71dp"
            tools:layout_editor_absoluteY="267dp" />

        <EditText
            android:hint="@string/confirm_pass"
            android:layout_gravity="center"
            android:id="@+id/settingsUserPasswordConf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="71dp"
            tools:layout_editor_absoluteY="267dp" />


        <Button
            android:id="@+id/settingsSaveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/buttonstyle"
            android:text="@string/save" />




    </LinearLayout>





</ScrollView>